--- a/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
+++ b/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
@@ -1,14 +1,55 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qG2-Pe-qbk">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="363-bD-NTs">
+            <objects>
+                <navigationController id="qG2-Pe-qbk" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Z4i-6O-9B7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="gC5-2w-M0Q" kind="relationship" relationship="rootViewController" id="zZi-Hp-MjA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h55-T8-J7Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3864" y="213"/>
+        </scene>
+        <!--Klyde Warren Trip-->
+        <scene sceneID="xXB-h4-yal">
+            <objects>
+                <viewController id="gC5-2w-M0Q" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YXc-I7-lph"/>
+                        <viewControllerLayoutGuide type="bottom" id="AOb-gI-sCh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZWT-XK-Kxd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.08235294118" green="0.40000000000000002" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Klyde Warren Trip" id="6Ve-n4-A7k">
+                        <barButtonItem key="rightBarButtonItem" title="Camera" id="g3O-Ri-nGc">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="4hb-ZF-Mgy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k3K-pL-MWw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3054" y="213"/>
+        </scene>
         <!--CameraViewController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -41,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2374" y="112"/>
+            <point key="canvasLocation" x="-2247" y="213"/>
         </scene>
     </scenes>
 </document>
