--- a/dtc-travel-app/dtc-travel-app/AudioEntry.storyboard
+++ b/dtc-travel-app/dtc-travel-app/AudioEntry.storyboard
@@ -14,7 +14,7 @@
         <!--Record Audio View Controller-->
         <scene sceneID="eYL-JP-tRl">
             <objects>
-                <viewController storyboardIdentifier="audio" useStoryboardIdentifierAsRestorationIdentifier="YES" id="MOY-1K-Iix" customClass="RecordAudioViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="audioEntry" useStoryboardIdentifierAsRestorationIdentifier="YES" id="MOY-1K-Iix" customClass="RecordAudioViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="AAe-Hd-Idc"/>
                         <viewControllerLayoutGuide type="bottom" id="Lum-lt-MFU"/>
@@ -30,7 +30,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <state key="normal" title="Record">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.0" green="0.41176470590000003" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="buttonTapped:" destination="MOY-1K-Iix" eventType="touchUpInside" id="WbM-gS-Q1o"/>
