Added image caption view and transition

--- a/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
+++ b/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
@@ -104,11 +104,55 @@
                     <connections>
                         <outlet property="addEntryButton" destination="bIt-QU-TbJ" id="nty-GT-XXb"/>
                         <outlet property="tableView" destination="WdK-Aq-fPs" id="hNs-Pl-2Wh"/>
+                        <segue destination="KfV-xB-RS0" kind="showDetail" identifier="usePhoto" action="showViewController:sender:" id="seN-ih-pkv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k3K-pL-MWw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3055.1999999999998" y="212.74362818590706"/>
+        </scene>
+        <!--Caption Media-->
+        <scene sceneID="MRr-Nj-VWg">
+            <objects>
+                <viewController storyboardIdentifier="captionView" id="KfV-xB-RS0" userLabel="Caption Media" customClass="CaptionMediaViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4hM-4P-V0f"/>
+                        <viewControllerLayoutGuide type="bottom" id="RaI-zt-Ezr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gxv-Al-3A9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jSy-kM-SSd" userLabel="NoteTextView">
+                                <rect key="frame" x="91" y="432" width="268" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ivW-Dw-nHm" userLabel="NotesLabel">
+                                <rect key="frame" x="16" y="481" width="58" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a3m-bE-D4z" userLabel="CapturedImageView">
+                                <rect key="frame" x="16" y="28" width="343" height="376"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="CapturedImageView" destination="a3m-bE-D4z" id="869-iv-Zri"/>
+                        <outlet property="DescriptionTextView" destination="jSy-kM-SSd" id="zNW-B9-ROR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EkX-ka-e5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2152.8000000000002" y="504.19790104947532"/>
         </scene>
         <!--Entry Options Popover View Controller-->
         <scene sceneID="aXp-bJ-vM7">
